--- a/Backend/services/worker-rust/Cargo.toml
+++ b/Backend/services/worker-rust/Cargo.toml
@@ -14,7 +14,7 @@ url = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
-deadpool-postgres = { version = "0.14", features = ["tokio-runtime", "serde"] }
+deadpool-postgres = { version = "0.14", features = ["rt_tokio_1", "serde"] }
 postgres-native-tls = "0.5"
 native-tls = "0.2"
 chrono = "0.4"
