--- a/Backend/services/worker-rust/Cargo.toml
+++ b/Backend/services/worker-rust/Cargo.toml
@@ -5,21 +5,25 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.9.0"
-actix-rt = "2.9.0"
 tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }
-reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls", "http2"] }
 scraper = "0.19"
-robots_txt = "0.7"     # <-- correct crate name
+robots_txt = "0.7"
 url = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 deadpool-postgres = { version = "0.14", features = ["rt_tokio_1", "serde"] }
-postgres-native-tls = "0.5"
-native-tls = "0.2"
 chrono = "0.4"
 anyhow = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 bytes = "1.6"
+
+# NEW:
+feed-rs = "1.3"           # RSS/Atom discover
+sitemap = "0.6"           # sitemap.xml discover
+sha2 = "0.10"             # content hashing
+whatlang = "0.16"         # language detection
+dashmap = "6"             # concurrent robots cache
