--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# --- Global ---
 .DS_Store
-*.pem
+*.log
+*.env
+*.bak
+*.tmp
+*.swp
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# --- Node / Frontend ---
+node_modules/
+frontend/out/
+frontend/.next/
+frontend/dist/
 
-# env files (can opt-in for committing if needed)
-.env*
+# --- Go ---
+Backend/api-gateway-go/bin/
+Backend/api-gateway-go/go.sum
+Backend/api-gateway-go/cookies.txt
 
-# vercel
-.vercel
+# --- Rust ---
+Backend/services/worker-rust/target/
+Backend/services/worker-rust/Cargo.lock
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# --- Python / Misc ---
+__pycache__/
+*.pyc
+venv/
 
-#flattener
-flattener.py
-all_files.txt
+# --- Local data ---
+cookies.txt
+.env
+*.sqlite
+*.db
